@@ -38,6 +38,7 @@ SVN trunk:
      * filter by name
      * filter by last update time (before or after)
    * campaign_list response now contains the time the request was processed
+   * campaign_list response now contains information about translations
  * utils: added weblist.pl and webtgz.pl web interface programs
 
 Version 1.0rc1:
